# synology-office-exporter

./: .env  .flake8  .gitignore  DEVELOPMENT.md  Makefile  README.md  drive_export.py  main.py  office_file_downloader.py  pyproject.toml  requirements-dev.txt  synology_office_exporter.py  test_office_file_downloader.py  test_office_file_fetcher.py  test_synology_office_exporter.py
.git-crypt/keys/default/0/: 02B6715D291FE310408E04E8844C1D3D9400FA61.gpg
.github/workflows/: ci-cd.yml  python-app.yml
requirements/: common.txt  dev.txt
synology_office_exporter/: __init__.py  cli.py  download_history.py  exporter.py  synology_office_exporter.py
tests/: test_deleted_files.py  test_download.py  test_download_history.py  test_exporter.py  test_exporter_deleted_files.py  test_exporter_download.py  test_exporter_stats.py  test_file_lock.py  test_stats.py  test_synology_office_exporter.py
