[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "synology-office-file-downloader"
version = "0.1.0"
description = "Tools for working with Synology NAS devices"
readme = "README.md"
authors = [{name = "Issei Suzuki"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
    "synology-drive-ex",
    "python-dotenv",
]

[project.urls]
"Homepage" = "https://github.com/isseis/synology-tools"
"Bug Tracker" = "https://github.com/isseis/synology-tools/issues"

[project.scripts]
synology-office-downloader = "main:main"

[tool.setuptools]
py-modules = ["office_file_downloader", "main"]

[tool.black]
line-length = 100
target-version = ["py36", "py37", "py38", "py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist"]
